# cc-starter

./: .gitignore  CMakeLists.txt  README.md  main.cc
foo/: CMakeLists.txt  foo.cc  foo.h  foo_test.cc
